ツリー関係の HA* クラスを追加（一部リネーム）

--- a/Tree/HAFunc.resx
+++ b/Tree/HAFunc.resx
@@ -103,6 +103,6 @@
     <value>False</value>
   </data>
   <data name="$this.Name">
-    <value>TVFunc</value>
+    <value>HAFunc</value>
   </data>
 </root>
