アイコンを追加、ツリー関係の操作の作り込み

--- a/Tree/HAMember.resx
+++ b/Tree/HAMember.resx
@@ -228,6 +228,6 @@
     <value>False</value>
   </data>
   <data name="$this.Name">
-    <value>HAFunc</value>
+    <value>HAMember</value>
   </data>
 </root>
