--- a/HierArch/Form1.resx
+++ b/HierArch/Form1.resx
@@ -107,8 +107,8 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFpTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0xLjAuMzMw
         MC4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZT
         eXN0ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMA
-        AADiCgAAAk1TRnQBSQFMAgEBBgEAAQkBAAEEAQABEAEAARABAAT/AQkBEAj/AUIBTQE2AQQGAAE2AQQC
-        AAEoAwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB
+        AABcDQAAAk1TRnQBSQFMAgEBCwEAAQ4BAAEEAQABEAEAARABAAT/AQkBEAj/AUIBTQE2AQQGAAE2AQQC
+        AAEoAwABQAMAAUADAAEBAQABCAYAARAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB
         3AHAAQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IB
         AAM5AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8B
         MwMAAWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYC
@@ -135,25 +135,36 @@
         /wGZAcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC
         /wEzAQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC
         /wFmAQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gB
-        AAHwAfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AWwAK
-        BCcACQQGAAEECP8BBCcAAQQH/wEEAQAB7AEDAewBAwHsAQQB/wYAAf8BBCcAAQQB/wUAAf8BBAEAAQMB
-        7AEDAewBAwEECP8BBCcAAQQH/wEEAQAB7AEDAewBAwHsAQQB/wMAAf8EBCIABf8BBAH/BQAB/wEEAQAB
-        AwHsAQMB7AEDAQQF/wEEAf8BBCMAAf8EAAEEB/8BBAEAAewBAwHsAQMB7AEEBf8CBCQABf8BBAH/AgAB
-        /wQEAQABAwHsAQMB7AEDBwQlAAH/BAABBAT/AQQB/wEEAgAB7AEDAewBAwHsAQMB7AEDAewBAwHsAQMl
-        AAX/AQQE/wIEAwABAwHsCAABAwHsJQAB/wIAAf8BAAYEBAAB7AEDAQAGBwEAAewBAyUABP8BAAH/CQAB
-        AwHsAQMBAAH7AgAB+wEAAewBAwHsJQAE/xAAAvv/AB4AAgQrAAIDBgACBwEAAQMGAAEEAgABBAIAAgQI
-        AAn/BQAJAwcAAgMGAAIHAQABAwYAAQQCAAEEAQABBAIAAQQHAAn/BAAB+wEACQMGAAIDBgACBwEAAQMG
-        AAEEAgABBAEAAQQCAAEEBwAJ/wQAAf8B+wEACQMFAAIDCQABAwcAAwQBAAEEAgABBAcACf8EAAH7Af8B
-        +wEACQMEAAwDCQABBAEAAwQIAAn/BAAB/wH7Af8B+w0AAgMIAAIDCQABBAEAAQQKAAn/BAAB+wH/AfsB
-        /wH7Af8B+wH/AfsIAAEDAQAIBwEAAQMWAAn/BAAB/wH7Af8B+wH/AfsB/wH7Af8IAAEDAQAIBwEAAQMW
-        AAn/BAAB+wH/AfsOAAEDAQAIBwEAAQMWAAb/GAABAwEACAcBAAEDFgAG/wEAAf8WAAEDAQAIBxgABv8Y
-        AAEDAQAIBwEAAQeSAAFCAU0BPgcAAT4DAAEoAwABQAMAATADAAEBAQABAQUAAYABARYAA/+BAAT/BAAC
-        /wH8BQAB/gEAAYAFAAH+BwAB/gcAAYAHAAGAAgABAQQAAYACAAEDBAABgAIAAQMEAAGAAQEBAAEDBAAB
-        gAEDAQABAwQAAYABBwEAAQMEAAGAAX8BAAEDBAABgAH/AYABBwQAAYEB/wH4AX8EAAT/BAAM/wHAAQEB
-        +QH/AeABAwEAAR8BgAEBAfYBzwHgAQMBAAEPAYABAQH2AbcB4AEDAQABBwGAAQEB9gG3AeABAwEAAQMB
-        gAEBAfgBtwHgAQMBAAEBAYABAQH+AY8B4AEDAgABgAEBAf4BPwHgAQMBAAEfAYABAQH/AX8B4AEDAQAB
-        HwGAAQEB/gE/AeABAwEAAR8BgAEBAf4BvwHgAQMBjwHxAYABAQH8AZ8B4AEHAf8B+QGAAQEB/QHfAeAB
-        DwH/AXUBgAEBAf0B3wHgAR8B/wGPAYABAQH9Ad8I/xYACw==
+        AAHwAfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AEwAB
+        AQH7PQABAQH7AQEbAAEEIAABAQH7AQEB+wIADf8MAAIEHgABAQH7AQEB+wMAAf8BAAH/AQAB/wEAAf8B
+        AAH/AQAB/wEAAf8MAAMEHAABBwEAAQEB+wQADf8MAAQEGwACBwH7BQAB/wEAAf8BAAH/AQAB/wEAAf8B
+        AAH/AQAB/wwABQQZAAMHBgAB/wEAAf8BAAH/AQAB/wEAAf8BAAH/AQAB/wwABAQaAAEHCQAB/wEAAQQB
+        AAH/AQAB/wEAAQQBAAH/DQADBCYAAwQDAAMEDgACBCYABQQBAAUEDQABBCkAAQQFAAEEOQABBAIAAQQC
+        AAEENgABBAMAAQQDAAEEAwABBDUAAQQDAAEEAwABBDUAAQQDAAEEAwABBAMAAQS3AAoEJwAJBAYAAQQI
+        /wEEJwABBAf/AQQBAAHsAQMB7AEDAewBBAH/BgAB/wEEJwABBAH/BQAB/wEEAQABAwHsAQMB7AEDAQQI
+        /wEEJwABBAf/AQQBAAHsAQMB7AEDAewBBAH/AwAB/wQEDAABBAYAAQQOAAX/AQQB/wUAAf8BBAEAAQMB
+        7AEDAewBAwEEBf8BBAH/AQQDAAUEBQABBAYAAQQFAAUEBAAB/wQAAQQH/wEEAQAB7AEDAewBAwHsAQQF
+        /wIEBAAEBAcAAQQEAAEEBwAEBAQABf8BBAH/AgAB/wQEAQABAwHsAQMB7AEDBwQFAAMECAABBAQAAQQI
+        AAMEBAAB/wQAAQQE/wEEAf8BBAIAAewBAwHsAQMB7AEDAewBAwHsAQMB7AEDBQACBAEAAQQHAAEEBAAB
+        BAcAAQQBAAIEBAAF/wEEBP8CBAMAAQMB7AgAAQMB7AUAAQQDAAIEBAABBAYAAQQEAAIEAwABBAQAAf8C
+        AAH/AQAGBAQAAewBAwEABgcBAAHsAQMLAAQECAAEBAoABP8BAAH/CQABAwHsAQMBAAH7AgAB+wEAAewB
+        AwHsJQAE/xAAAvv/AB4AAgQrAAIDBgACBwEAAQMGAAEEAgABBAIAAgQIAAn/BQAJAwcAAgMGAAIHAQAB
+        AwYAAQQCAAEEAQABBAIAAQQHAAn/BAAB+wEACQMGAAIDBgACBwEAAQMGAAEEAgABBAEAAQQCAAEEBwAJ
+        /wQAAf8B+wEACQMFAAIDCQABAwcAAwQBAAEEAgABBAcACf8EAAH7Af8B+wEACQMEAAwDCQABBAEAAwQI
+        AAn/BAAB/wH7Af8B+w0AAgMIAAIDCQABBAEAAQQKAAn/BAAB+wH/AfsB/wH7Af8B+wH/AfsIAAEDAQAI
+        BwEAAQMWAAn/BAAB/wH7Af8B+wH/AfsB/wH7Af8IAAEDAQAIBwEAAQMWAAn/BAAB+wH/AfsOAAEDAQAI
+        BwEAAQMWAAb/GAABAwEACAcBAAEDFgAG/wEAAf8WAAEDAQAIBxgABv8YAAEDAQAIBwEAAQeSAAFCAU0B
+        PgcAAT4DAAEoAwABQAMAAUADAAEBAQABAQYAAQIWAAP/gQAB/wH4BP8CAAH/AfABgAEAAf8B7wIAAf8B
+        4AGAAQAB/wHnAgAB/wHAAYABAAH/AeMCAAH/AYEBgAEAAf8B4QIAAf8BgwGAAQAB/wHgAgAB/wEHAZUB
+        VAH/AeECAAH/AQ8CqgH/AeMCAAH+AT8BsQHGAf8B5wIAAfkB/wGgAYIB/wHvAgABBwH/AbsB7gL/AgAB
+        5wH/AfsBbwL/AgAB2wH/At0C/wIAAdsB/wH3AXcC/wIAAecB/wLdAv8CAAb/AgAK/wH8AQAE/wH+AQAB
+        gAEABP8B/gMABP8B/gMABP8BgAMAAf8B9wHvAf8BgAIAAQEBwQH3Ae8BgwGAAgABAwHDAfsB3wHDAYAC
+        AAEDAccB+wHfAeMBgAEBAQABAwHLAfsB3wHTAYABAwEAAQMB3AH3Ae8BOwGAAQcBAAEDAf8BDwHwAf8B
+        gAF/AQABAwT/AYAB/wGAAQcE/wGBAf8B+AF/GP8BwAEBAfkB/wHgAQMBAAEfAYABAQH2Ac8B4AEDAQAB
+        DwGAAQEB9gG3AeABAwEAAQcBgAEBAfYBtwHgAQMBAAEDAYABAQH4AbcB4AEDAQABAQGAAQEB/gGPAeAB
+        AwIAAYABAQH+AT8B4AEDAQABHwGAAQEB/wF/AeABAwEAAR8BgAEBAf4BPwHgAQMBAAEfAYABAQH+Ab8B
+        4AEDAY8B8QGAAQEB/AGfAeABBwH/AfkBgAEBAf0B3wHgAQ8B/wF1AYABAQH9Ad8B4AEfAf8BjwGAAQEB
+        /QHfCP8WAAs=
 </value>
   </data>
   <data name="statusBar1.Modifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
