--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,7 +1,7 @@
   **** ToDo ****
 
 
-  1 To Do
+  1 プログラミング
 
 コンストラクタでのbaseサポート
 メンバの初期化
@@ -13,4 +13,19 @@ enumのサポート
 一括コメント
 中央レポジトリ
 遠隔同期
+検索
+ツリー式GUIビルダ
+構造体のサポート
+依存関係自動検出
+XmlDocViewerとの統合とリフレクション
+マクロ
+変数名自動更新
+
+
+
+  2 ツリー
+
+リンクのサポート
+部分ファイルの分割
+中央管理システム
 
