プラグインに着手

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -20,6 +20,8 @@ enumのサポート
 XmlDocViewerとの統合とリフレクション
 マクロ
 変数名自動更新
+補正のできるパーサ
+コメントのインデント
 
 
 
@@ -28,4 +30,10 @@ XmlDocViewerとの統合とリフレクション
 リンクのサポート
 部分ファイルの分割
 中央管理システム
+
+
+
+  3 テキスト生成
+
+プラグイン化
 
