--- a/HierArch/Form1.resx
+++ b/HierArch/Form1.resx
@@ -188,6 +188,9 @@
   <data name="mnuViewStatusBar.Modifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Public</value>
   </data>
+  <data name="cmEdit.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>496, 17</value>
+  </data>
   <data name="$this.Name">
     <value>Form1</value>
   </data>
