hacls の分離を拡大、MIME や XML 関連のクラスを追加

--- a/HierArch/Form1.resx
+++ b/HierArch/Form1.resx
@@ -194,4 +194,21 @@
   <data name="$this.Name">
     <value>Form1</value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAQAAAAAADoAgAAFgAAACgAAAAgAAAAQAAAAAEABAAAAAAAgAIAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAACAAACAAAAAgIAAgAAAAIAAgACAgAAAgICAAMDAwAAAAP8AAP8AAAD//wD/AAAA/wD/AP//
+        AAD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAVVVV
+        VQAAAAAAAAAAAAAFVVVVVVVVVVUAAAAAAAAABVVVVVVVUAVVUAAAAAAAAAVVVVVVVQmQBQUAAAAAAAAA
+        VVVVVVUJmQBVUAAAAAAAAAVVVVVVUJBVVVUAAAAAAAAABVVVVVAFVVVVAAAAAAAAAAAFVVAFVVVVVVAA
+        AAAAAAAAAAVVVVVVVVVQAAAAAAAAAAAABVVVVVAFUAAAAAAAAAAAAABVVVVQBVAAAAAAAAAAAAAABVAF
+        VVBQAAAAAAAAAAAAAAVQBVUFUAAAAAAAAAAAAAAAVVVVVVAAAAAAAAAAAAAAAFAAVVVQAAAAAAAAAAAA
+        AABVVVVVUAAAAAAAAAAAAAAABVVVUAAAAAAAAAAAAAAAAABVUAMwAAAAAAAAAAAAAAAAAAMzMAAAAAAA
+        AAAAAAAAAAADMzAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAAAAAAAwAA
+        AAAAAAAAAAAAAAAAAAMwAAAAAAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///////////wD///gAA//wAAH/8AA
+        A//AAAH/4AAA//AAAH/4AAB//gAAP/+AAD//4AA///gAP//8AD///AA///4AP//+AD///gA///8AP///
+        gD///8A////gP///+H////x////8f////D////4////+P////3////9//////w==
+</value>
+  </data>
 </root>
