--- a/ToDo.txt
+++ b/ToDo.txt
@@ -3,8 +3,8 @@
 
   1 プログラミング
 
+検索
 パーサが変
-括弧閉じの通過が変
 コンストラクタでのbaseサポート
 メンバの初期化
 enumのサポート
@@ -13,9 +13,6 @@ enumのサポート
 オーバーライドの検出
 難しいことはパースせずにリフレクション
 一括コメント
-中央レポジトリ
-遠隔同期
-検索
 ツリー式GUIビルダ
 構造体のサポート
 依存関係自動検出
@@ -29,7 +26,11 @@ XmlDocViewerとの統合とリフレクション
 
   2 ツリー
 
-リンクのサポート
-部分ファイルの分割
-中央管理システム
+一般ファイルへのリンクのサポート
+
+//  [Done]
+// XMLリンク
+// 部分ファイルの分割
+// 中央管理システム
+// 遠隔同期
 
