ブロック出力を修正

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -4,7 +4,6 @@
   1 プログラミング
 
 検索
-パーサが変
 コンストラクタでのbaseサポート
 メンバの初期化
 enumのサポート
@@ -17,10 +16,13 @@ enumのサポート
 構造体のサポート
 依存関係自動検出
 XmlDocViewerとの統合とリフレクション
-マクロ
 変数名自動更新
 補正のできるパーサ
 コメントのインデント
+
+//  [Done]
+// パーサが変
+// マクロ
 
 
 
