ファイルの再配置、不要なファイルとコメントの削除

--- a/HierArch/Tree/HATree.resx
+++ b/HierArch/Tree/HATree.resx
@@ -121,9 +121,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABW
-        DQAAAk1TRnQBSQFMAgEBCwEAAQ4BAAEIAQABEAEAARABAAT/AQkBEAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADc
+        GgAAAk1TRnQBSQFMAgEBGwEAAR0BAAEIAQABEAEAARABAAT/AQkBEAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAAXADAAEBAQABCAYAARwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -150,56 +150,96 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/w8AAQEB+z0AAQEB+wEB
-        GwABBCAAAQEB+wEBAfsCAA3/DAACBB4AAQEB+wEBAfsDAAH/AQAB/wEAAf8BAAH/AQAB/wEAAf8BAAH/
-        DAADBBwAAQcBAAEBAfsEAA3/DAAEBBsAAgcB+wUAAf8BAAH/AQAB/wEAAf8BAAH/AQAB/wEAAf8MAAUE
-        GQADBwYAAf8BAAH/AQAB/wEAAf8BAAH/AQAB/wEAAf8MAAQEGgABBwkAAf8BAAEEAQAB/wEAAf8BAAEE
-        AQAB/w0AAwQmAAMEAwADBA4AAgQmAAUEAQAFBA0AAQQpAAEEBQABBDkAAQQCAAEEAgABBDYAAQQDAAEE
-        AwABBAMAAQQ1AAEEAwABBAMAAQQ1AAEEAwABBAMAAQQDAAEEtwAKBCcACQQGAAEECP8BBCcAAQQH/wEE
-        AQAB7AEDAewBAwHsAQQB/wYAAf8BBCcAAQQB/wUAAf8BBAEAAQMB7AEDAewBAwEECP8BBCcAAQQH/wEE
-        AQAB7AEDAewBAwHsAQQB/wMAAf8EBAwAAQQGAAEEDgAF/wEEAf8FAAH/AQQBAAEDAewBAwHsAQMBBAX/
-        AQQB/wEEAwAFBAUAAQQGAAEEBQAFBAQAAf8EAAEEB/8BBAEAAewBAwHsAQMB7AEEBf8CBAQABAQHAAEE
-        BAABBAcABAQEAAX/AQQB/wIAAf8EBAEAAQMB7AEDAewBAwcEBQADBAgAAQQEAAEECAADBAQAAf8EAAEE
-        BP8BBAH/AQQCAAHsAQMB7AEDAewBAwHsAQMB7AEDAewBAwUAAgQBAAEEBwABBAQAAQQHAAEEAQACBAQA
-        Bf8BBAT/AgQDAAEDAewIAAEDAewFAAEEAwACBAQAAQQGAAEEBAACBAMAAQQEAAH/AgAB/wEABgQEAAHs
-        AQMBAAYHAQAB7AEDCwAEBAgABAQKAAT/AQAB/wkAAQMB7AEDAQAB+wIAAfsBAAHsAQMB7CUABP8QAAL7
-        /wAeAAIEKwACAwYAAgcBAAEDBgABBAIAAQQCAAIECAAJ/wUACQMHAAIDBgACBwEAAQMGAAEEAgABBAEA
-        AQQCAAEEBwAJ/wQAAfsBAAkDBgACAwYAAgcBAAEDBgABBAIAAQQBAAEEAgABBAcACf8EAAH/AfsBAAkD
-        BQACAwkAAQMHAAMEAQABBAIAAQQHAAn/BAAB+wH/AfsBAAkDBAAMAwkAAQQBAAMECAAJ/wQAAf8B+wH/
-        AfsNAAIDCAACAwkAAQQBAAEECgAJ/wQAAfsB/wH7Af8B+wH/AfsB/wH7CAABAwEACAcBAAEDFgAJ/wQA
-        Af8B+wH/AfsB/wH7Af8B+wH/CAABAwEACAcBAAEDFgAJ/wQAAfsB/wH7DgABAwEACAcBAAEDFgAG/xgA
-        AQMBAAgHAQABAxYABv8BAAH/FgABAwEACAcYAAb/GAABAwEACAcBAAEHkgABQgFNAT4HAAE+AwABKAMA
-        AUADAAEwAwABAQEAAQEFAAGAAQEWAAP/AQAB/wH4BP8CAAH/AfABgAEAAf8B7wIAAf8B4AGAAQAB/wHn
-        AgAB/wHAAYABAAH/AeMCAAH/AYEBgAEAAf8B4QIAAf8BgwGAAQAB/wHgAgAB/wEHAZUBVAH/AeECAAH/
-        AQ8CqgH/AeMCAAH+AT8BsQHGAf8B5wIAAfkB/wGgAYIB/wHvAgABBwH/AbsB7gL/AgAB5wH/AfsBbwL/
-        AgAB2wH/At0C/wIAAdsB/wH3AXcC/wIAAecB/wLdAv8CAAb/AgAK/wH8AQAE/wH+AQABgAEABP8B/gMA
-        BP8B/gMABP8BgAMAAf8B9wHvAf8BgAIAAQEBwQH3Ae8BgwGAAgABAwHDAfsB3wHDAYACAAEDAccB+wHf
-        AeMBgAEBAQABAwHLAfsB3wHTAYABAwEAAQMB3AH3Ae8BOwGAAQcBAAEDAf8BDwHwAf8BgAF/AQABAwT/
-        AYAB/wGAAQcE/wGBAf8B+AF/GP8BwAEBAfkB/wHgAQMBAAEfAYABAQH2Ac8B4AEDAQABDwGAAQEB9gG3
-        AeABAwEAAQcBgAEBAfYBtwHgAQMBAAEDAYABAQH4AbcB4AEDAQABAQGAAQEB/gGPAeABAwIAAYABAQH+
-        AT8B4AEDAQABHwGAAQEB/wF/AeABAwEAAR8BgAEBAf4BPwHgAQMBAAEfAYABAQH+Ab8B4AEDAY8B8QGA
-        AQEB/AGfAeABBwH/AfkBgAEBAf0B3wHgAQ8B/wF1AYABAQH9Ad8B4AEfAf8BjwGAAQEB/QHfCP8WAAs=
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/0EAAewLvTQAAewKsQG9
+        NAAB7AqxAb00AAHsArEGAAKxAb00AAHsCrEBvQkAAfEE7AsAAfkEARYAAewCsQYAArEBvQgAAfEDBwPs
+        CQAB+QMgAwEVAAHsCrEBvQgAAfEEBwLsCQAB+QQgAgEVAAHsArEGAAKxAb0IAAHxBAcC7AkAAfkEIAIB
+        FQAB7AqxAb0IAAHxBQcB7AkAAfkFIAEBFQAB7AKxAwABsQIAArEBvQkAAfEEBwHsCgAB+QQgAQEVAAHs
+        CrEBvQoABPEMAAT5FgAB7AqxAb00AAHsAbEBAAGxAQABsQEAAbEBAAGxAQABsTYAAbEB7AGxAewBsQHs
+        AbEB7AGxtQAB7AsHBAAB7AsHBAAB7AsHBAAB7AsHBAAB7ArWAQcEAAHsCpMBBwQAAewLBwQAAewKnQEH
+        BAAB7ArWAQcEAAHsCpMBBwQAAewLBwQAAewKnQEHBAAB7ALWBgAC1gEHBAAB7AKTBgACkwEHBAAB7AIH
+        BgADBwQAAewCnQYAAp0BBwQAAewK1gEHBAAB7AqTAQcEAAHsCwcEAAHsCp0BBwQAAewC1gYAAtYBBwQA
+        AewCkwYAApMBBwQAAewCBwYAAwcEAAHsAp0GAAKdAQcEAAHsCtYBBwQAAewKkwEHBAAB7AsHBAAB7Aqd
+        AQcEAAHsAtYGAALWAQcEAAHsApMGAAKTAQcEAAHsAgcGAAMHBAAB7AKdBgACnQEHBAAB7ArWAQcEAAHs
+        CpMBBwQAAewLBwQAAewKnQEHBAAB7ALWAwAB1gIAAtYBBwQAAewCkwMAAZMCAAKTAQcEAAHsAgcDAAEH
+        AgADBwQAAewCnQMAAZ0CAAKdAQcEAAHsCtYBBwQAAewKkwEHBAAB7AsHBAAB7AqdAQcEAAHsCtYBBwQA
+        AewKkwEHBAAB7AsHBAAB7AqdAQcEAAHsAdYBAAHWAQAB1gEAAdYBAAHWAQAB1gQAAewBkwEAAZMBAAGT
+        AQABkwEAAZMBAAGTBAAB7AEHAQABBwEAAQcBAAEHAQABBwEAAQcEAAHsAZ0BAAGdAQABnQEAAZ0BAAGd
+        AQABnQYAAdYB7AHWAewB1gHsAdYB7AHWBwABkwHsAZMB7AGTAewBkwHsAZMHAAEHAewBBwHsAQcB7AEH
+        AewBBwcAAZ0B7AGdAewBnQHsAZ0B7AGdUgACQw0AAkMPAAJDHAABiwEAA0MJAAFEAQABRAEAAkMMAAFE
+        AQADQwHsCwcNAAGLApABAANDBwABRAKCAQABRAEAAkMKAAFEAoIBAANDAewK/wEHCwABiwGQAZ0BkAEA
+        AYsBAAFDBgABRAGCAo4BggEAAUQBAAFDCQABRAGCAY4BggEAAUQBAAFDAQAB7Ar/AQcJAAGLAZADnQGQ
+        AQABiwYAAUQBggSOAYIBAAFECQABRAGCA44BggEAAUQDAAHsAv8GAAL/AQcHAAGLAZAFnQGQAQABiwQA
+        AUQBggaOAYIBAAFEBwABRAGCBY4BggEAAUQDAAHsCv8BBwcABp0BkAEAA4sDAAiOAYIBAAFEBwAGjgGC
+        AQADRAIAAewC/wYAAv8BBwcABp0BkAEAAosBkAMACI4BggEAAUQHAAaOAYIBAAJEAYICAAHsCv8BBwYA
+        CJ0BAAOQAwAIjgGCAQABRAYACI4BAAOCAgAB7AL/BgAC/wEHBgAGnQIUBZACAAmOAQABggYABo4CFAWC
+        AQAB7Ar/AQcGAASdAhQGkAGdAgAHjgIUAoIGAASOAhQGggGOAQAB7AL/AwAB/wIAAv8BBwUAA50CFASQ
+        AgABkAGdAwAFjgIUBIIFAAOOAhQEggIAAYIBjgIAAewK/wEHBQABnQIUBJAJAAOOAhQEggGOAYIFAAGO
+        AhQEgggAAewK/wEHBQABFAMAAZALAAGOAhQCggIAAYIBjgcAARQDAAGCCgAB7AH/AQAB/wEAAf8BAAH/
+        AQAB/wEAAf8VAAEUAoIeAAH/AewB/wHsAf8B7AH/AewB/1IAAkMNAAJDDwACQw0AAkMNAAGMAQADQwkA
+        ARQBAAEUAQACQwwAARQBAANDCQABiwEAAYsBAAJDCgABjALtAQADQwcAARQB7AEUAQABFAEAAkMKAAEU
+        AuwBAANDBwABiwGQAYsBAAGLAQACQwgAAYwB7QGTAe0BAAGMAQABQwYAARQB7AIHARQBAAEUAQABQwkA
+        ARQB7AEHAewBAAEUAQABQwYAAYsBkAKdAYsBAAGLAQABQwcAAYwB7QOTAe0BAAGMBgABFAHsBAcBFAEA
+        ARQJAAEUAewDBwHsAQABFAYAAYsBkASdAYsBAAGLBwABjAHtBZMB7QEAAYwEAAEUAewGBwEUAQABFAcA
+        ARQB7AUHAewBAAEUBAABiwGQBp0BiwEAAYsHAAaTAe0BAAOMAwAIBwEUAQABFAcABgcB7AEAAxQDAAid
+        AYsBAAGLBwAGkwHtAQACjAHtAwAIBwEUAQABFAcABgcB7AEAAhQB7AMACJ0BiwEAAYsGAAiTAQAD7QMA
+        CAcBFAEAARQGAAgHAQAD7AMACJ0BiwEAAYsGAAaTAhQF7QIACQcBAAHsBgAGBwIUBewCAAmdAQABkAYA
+        BJMCFAbtAZMCAAcHAhQC7AYABAcCFAbsAQcCAAedAhQCkAUAA5MCFATtAgAB7QGTAwAFBwIUBOwFAAMH
+        AhQE7AIAAewBBwMABZ0CFASQBQABkwIUBO0JAAMHAhQE7AEHAewFAAEHAhQE7AkAA50CFASQAZ0BkAUA
+        ARQDAAHtCwABBwIUAuwCAAHsAQcHAAEUAwAB7AsAAZ0CFAKQAgABkAGdFwABFALsHQABFAKQWQACQw0A
+        AkMPAAJDDQACQw0AAeYBAANDCQAByAEAAcgBAAJDDAAByAEAA0MJAAGMAQABjAEAAkMKAAHmAtYBAAND
+        BwAByAHmAcgBAAHIAQACQwoAAcgC5gEAA0MHAAGMAe0BjAEAAYwBAAJDCAAB5gHWAd0B1gEAAeYBAAFD
+        BgAByAHmAtYByAEAAcgBAAFDCQAByAHmAdYB5gEAAcgBAAFDBgABjAHtApMBjAEAAYwBAAFDBwAB5gHW
+        A90B1gEAAeYGAAHIAeYE1gHIAQAByAkAAcgB5gPWAeYBAAHIBgABjAHtBJMBjAEAAYwHAAHmAdYF3QHW
+        AQAB5gQAAcgB5gbWAcgBAAHIBwAByAHmBdYB5gEAAcgEAAGMAe0GkwGMAQABjAcABt0B1gEAA+YDAAjW
+        AcgBAAHIBwAG1gHmAQADyAMACJMBjAEAAYwHAAbdAdYBAALmAdYDAAjWAcgBAAHIBwAG1gHmAQACyAHm
+        AwAIkwGMAQABjAYACN0BAAPWAwAI1gHIAQAByAYACNYBAAPmAwAIkwGMAQABjAYABt0CFAXWAgAJ1gEA
+        AeYGAAbWAhQF5gIACZMBAAHtBgAE3QIUBtYB3QIAB9YCFALmBgAE1gIUBuYB1gIAB5MCFALtBQAD3QIU
+        BNYCAAHWAd0DAAXWAhQE5gUAA9YCFATmAgAB5gHWAwAFkwIUBO0FAAHdAhQE1gkAA9YCFATmAdYB5gUA
+        AdYCFATmCQADkwIUBO0BkwHtBQABFAMAAdYLAAHWAhQC5gIAAeYB1gcAARQDAAHmCwABkwIUAu0CAAHt
+        AZMXAAEUAuYdAAEUAu2IAAJDJwAG+w4AAeYBAAHmAQACQxQABuwBAAHDAQAB7AYACvsKAAHmAtYBAAHm
+        AQACQw0AAf4BAAH+CgACwwIAAewEAAT7BAAE+wcAAeYB1gLdAdYBAAHmAQABQwQAAf0IAAH+AQAB/gQA
+        C8MBAAHsAwAD+wEABPsBAAP7BQAB5gHWBN0B1gEAAeYFAAH9BAAB+gEAAfoJAAvDAQAB7AIAA/sBAAb7
+        AQAD+wIAAeYB1gbdAdYBAAHmBgAB/QIAAfoBAAH6CgALwwEAAewCAAP7AQAG+wEAA/sCAAjdAdYBAAHm
+        BQAB/RAAC8MBAAHsAgAO+wIACN0B1gEAAeYWAAvDAQAB7AIABPsCAAL7AgAE+wIACN0B1gEAAeYWAAvD
+        AQAB7AIABPsCAAL7AgAE+wIACd0BAAHWCwAB+wUAAf0EAAvDAQAB7AIABPsCAAL7AgAE+wIAB90CFALW
+        DAAB+wMAAf0FAAvDAQAB7AMAA/sCAAL7AgAD+wMABd0CFATWCwAB+wUAAf0EAAvDAQAB7AMADPsDAAPd
+        AhQE1gHdAdYMAAH7AwAB/QUAC8MBAAHsBAAK+wQAAd0CFALWAgAB1gHdGAALwwgABvsGAAEUAtb/ACYA
+        AfkiAAEDDAACBw0AAfkBBwEAAgcMAAH5AQAB7AkAAf4FAAL7AQMNAAIHCgAB+QEHBAACBwkAAfkBBwEA
+        AewCBwUAAv4BAAXsAQAC+wEDBQAD/wIHAQAB/wIAAgcHAAH5AQcBAAH5AQAC/woAAfkBBwMAAuwBBwQA
+        Af4BAAcHAQAB+wUAA/8CBwEABP8IAAH5AQcBAAL5AQAD/wgAAfkBBwEAA/kCAAHsAwAB7AEAAewHBwHs
+        BQAD/wIHAQAG/wYAAfkBBwEAA/kBAAL/CAAB+QEHAQAG+QQAAewBAAHsAwcB7AMHAewEAAEHAv8CBwEA
+        Bv8HAAEHAQAD+QEAAv8JAAEHAQAH+QQAAewBAAHsAgcB7AEAAewCBwHsBQADBwEABv8JAAT5AQAB/wsA
+        B/kFAAHsAQAB7AEHAewBAAEFAQAB7AEHAewLAAP/CgAD+QEAAf8NAAX5BgAB7AEAAuwBAAL9AQUBAALs
+        GAAC+RIAAvkHAAHsBQAC/QEFGQAC+RwABuwBAAH9AQAE7BUAAflrAAFCAU0BPgcAAT4DAAEoAwABQAMA
+        AXADAAEBAQABAQUAAYABAxYAA/8BAAGAAQ8E/wMAAQcE/wMAAQcE/wMAAQcE/wMAAQcB/AE/AfwBPwMA
+        AQcB+AEfAfgBHwMAAQcB8AEPAfABDwMAAQcB8AEPAfABDwMAAQcB8AEPAfABDwMAAQcB8AEPAfABDwMA
+        AQcB+AEfAfgBHwMAAQcB/AE/AfwBPwMAAQcE/wMAAQcE/wIAAYABDwT/AgAB1QFfBP8CAAGAAQ8BgAEP
+        AYABDwGAAQ8BAAEHAQABBwEAAQcBAAEHAQABBwEAAQcBAAEHAQABBwEAAQcBAAEHAQABBwEAAQcBAAEH
+        AQABBwEAAQcBAAEHAQABBwEAAQcBAAEHAQABBwEAAQcBAAEHAQABBwEAAQcBAAEHAQABBwEAAQcBAAEH
+        AQABBwEAAQcBAAEHAQABBwEAAQcBAAEHAQABBwEAAQcBAAEHAQABBwEAAQcBAAEHAQABBwEAAQcBAAEH
+        AQABBwEAAQcBAAEHAQABBwEAAQcBAAEHAQABBwEAAQcBAAEHAYABDwGAAQ8BgAEPAYABDwHVAV8B1QFf
+        AdUBXwHVAV8B/wHhAf8BgwH/AeEBgAEPAf8BgAH+AQEB/wGAAQABBwH+AQAB+AEBAf4CAAEHAfgBAQHg
+        AQMB+AEBAQABBwHgAQMBgAEHAeABAwEAAQcBwAEDAQABBwHAAQMBAAEHAcABAQEAAQcBwAEBAQABBwHA
+        AQEBAAEHAcABAQEAAQcBgAEBAQABBwGAAQEBAAEHAYACAAEHAYACAAEHAYACAAEHAYACAAEHAwABBwMA
+        AQcBAAEzAQABBwEAATMBAAEHATAB/wEAAQ8BMAH/AQABBwH7Af8BAwE/AfsB/wGAAQ8C/wHPA/8B1QFf
+        Af8B4QH/AYMB/wHhAf8BgwH/AYAB/gEBAf8BgAH+AQEB/gEAAfgBAQH+AQAB+AEBAfgBAQHgAQMB+AEB
+        AeABAwHgAQMBgAEHAeABAwGAAQcBwAEDAQABBwHAAQMBAAEHAcABAQEAAQcBwAEBAQABBwHAAQEBAAEH
+        AcABAQEAAQcBgAEBAQABBwGAAQEBAAEHAYACAAEHAYACAAEHAYACAAEHAYACAAEHAwABBwMAAQcBAAEz
+        AQABBwEAATMBAAEHATAB/wEAAQ8BMAH/AQABDwH7Af8BAwE/AfsB/wEDAT8C/wHPA/8BzwL/AeEB/wGD
+        Af8B4QH/AYMB/wGAAf4BAQH/AYAB/gEBAf4BAAH4AQEB/gEAAfgBAQH4AQEB4AEDAfgBAQHgAQMB4AED
+        AYABBwHgAQMBgAEHAcABAwEAAQcBwAEDAQABBwHAAQEBAAEHAcABAQEAAQcBwAEBAQABBwHAAQEBAAEH
+        AYABAQEAAQcBgAEBAQABBwGAAgABBwGAAgABBwGAAgABBwGAAgABBwMAAQcDAAEHAQABMwEAAQcBAAEz
+        AQABBwEwAf8BAAEPATAB/wEAAQ8B+wH/AQMBPwH7Af8BAwE/Av8BzwP/Ac8E/wHvAfgBHwH/AYMD/wHP
+        AeABBwH+AQEB/wHxAeABBwHAAQMB+AEBAd8B4AHAAQMBgAEBAeABAwGMAUEBgAEBAYABAQGAAQcBCAEj
+        AYABAQMAAQcBAAF3AYABAQMAAQcBGAGvAYABAQMAAQcBrwHfAYABAQMAAQcB9gGrAYABAQMAAQcB+AFx
+        AYABAQMAAQcB/AEhAYABAQGAAQEBAAEHAfwBIQGAAQEBgAEBAQABBwH+ASMBgAEBAcABAwEAAQ8B/wF3
+        AYABAwHgAQcBAwE/Av8BwAEHAfgBHwHPFP8BnwL/AvcB/wGfAf8BBwH/AY8ByAEBAf8BBwH+AQEB/wED
+        AdkBwQHwAQEB/AEAAf4BAAGgAQAB4AEAAfgBAQH8AQEBwAEBAcABAQHwAQEB+AEBAcABAQGAAQEB4AED
+        AfABAAHQAQUBAAEDAeABBwHwAQEB0AEFAQABBwHwAQ8B8AEDAdABBQHEAQ8B8AEfAfgBBwHQAQUB/wEf
+        AfABPwH+AQ8B3gENAv8B4QL/AZ8BwAEBAv8B4wT/Ab8C/wHnBf8WAAs=
 </value>
   </data>
   <data name="$this.Name" xml:space="preserve">
-    <value>Form1</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        AAABAAEAICAQAAAAAADoAgAAFgAAACgAAAAgAAAAQAAAAAEABAAAAAAAgAIAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAACAAACAAAAAgIAAgAAAAIAAgACAgAAAgICAAMDAwAAAAP8AAP8AAAD//wD/AAAA/wD/AP//
-        AAD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAVVVV
-        VQAAAAAAAAAAAAAFVVVVVVVVVVUAAAAAAAAABVVVVVVVUAVVUAAAAAAAAAVVVVVVVQmQBQUAAAAAAAAA
-        VVVVVVUJmQBVUAAAAAAAAAVVVVVVUJBVVVUAAAAAAAAABVVVVVAFVVVVAAAAAAAAAAAFVVAFVVVVVVAA
-        AAAAAAAAAAVVVVVVVVVQAAAAAAAAAAAABVVVVVAFUAAAAAAAAAAAAABVVVVQBVAAAAAAAAAAAAAABVAF
-        VVBQAAAAAAAAAAAAAAVQBVUFUAAAAAAAAAAAAAAAVVVVVVAAAAAAAAAAAAAAAFAAVVVQAAAAAAAAAAAA
-        AABVVVVVUAAAAAAAAAAAAAAABVVVUAAAAAAAAAAAAAAAAABVUAMwAAAAAAAAAAAAAAAAAAMzMAAAAAAA
-        AAAAAAAAAAADMzAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAAAAAAAwAA
-        AAAAAAAAAAAAAAAAAAMwAAAAAAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///////////wD///gAA//wAAH/8AA
-        A//AAAH/4AAA//AAAH/4AAB//gAAP/+AAD//4AA///gAP//8AD///AA///4AP//+AD///gA///8AP///
-        gD///8A////gP///+H////x////8f////D////4////+P////3////9//////w==
-</value>
+    <value>HATree</value>
   </data>
 </root>
